# rust_snake_game_wasm

./: Cargo.toml  README.md
backup/: another_lib.rs  lib.rs  main.rs
src/: lib.rs
www/: bootstrap.js  index copy.html  index copy.js  index.html  index.js  note.txt  package-lock.json  package.json  webpack.config.js
www/utils/: random.js
